@@ -1,4 +1,7 @@
 
+2009-03-16 17:36 Ali aliov@xfce.org 
+	 * : Fix wrong alarm settings
+
 2009-03-16 15:39 Ali aliov@xfce.org 
 	 * : Set brightness idle level to the last user selected level+Fix a bug in SetCpuFreqGovernor that was causing a proxy disconnection
 
